# manager

./: .gitignore  build.sh  pyproject.toml  render.yaml  requirements.txt  ruff.toml  sonar-project.properties
core/: admin.py  callbacks.py  settings.py  urls.py
core/callbacks/: __init__.py  badges.py  dashboard.py  environment.py  helpers.py  utils.py
locale/tr/LC_MESSAGES/: django.po  unfold.po
member/: admin.py  enums.py  models.py
secretary/: admin.py  apps.py  enums.py  models.py
secretary/admin/: __init__.py  contact.py  emergency_contact.py  event.py  group.py  user.py  vehicle.py
secretary/migrations/: 0001_initial.py  0002_alter_contact_address_alter_contact_phone_and_more.py  0002_alter_emergencycontact_unique_together.py  0003_user_sponsor.py  0003_vehicle_is_active_alter_vehicle_plate.py  0004_alter_vehicle_plate_alter_vehicle_year_event.py
sergeant_at_arms/: admin.py  apps.py  models.py
sergeant_at_arms/migrations/: 0001_initial.py  0002_discipline_is_guilty_alter_discipline_penalty.py
static/: manifest.json  serviceworker.js
templates/admin/: base.html  index.html
treasury/: admin.py  apps.py  enums.py  models.py
treasury/migrations/: 0001_initial.py  0002_inventoryitem_inventory.py  0003_alter_expense_amount_alter_income_amount_and_more.py  0004_statement_remove_income_user_period_dues_and_more.py  0005_alter_period_month_alter_period_year.py
